Fix threshold name jumps out of the line when too long

--- a/src/forms/ThresholdsSelection.css
+++ b/src/forms/ThresholdsSelection.css
@@ -52,6 +52,13 @@
   justify-content: space-between;
 }
 
+.ThresholdName {
+  width: 80%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .ThresholdDelete {
   cursor: pointer;
   color: #707070;
